@@ -12,3 +12,10 @@ build.dir.hadoop=${build.dir.hive}/hadoopcore
 hadoop.root.default=${build.dir.hadoop}/hadoop-${hadoop.version}
 hadoop.root=${hadoop.root.default}
 hadoop.jar=${hadoop.root}/hadoop-${hadoop.version}-core.jar
+hadoop.test.jar=${hadoop.root}/hadoop-${hadoop.version}-test.jar
+jetty.test.jar=${hadoop.root}/lib/jetty-5.1.4.jar
+servlet.test.jar=${hadoop.root}/lib/servlet-api.jar
+jasper.test.jar=${hadoop.root}/lib/jetty-ext/jasper-runtime.jar
+jasperc.test.jar=${hadoop.root}/lib/jetty-ext/jasper-compiler.jar
+jsp.test.jar=${hadoop.root}/lib/jetty-ext/jsp-api.jar
+common.jar=${hadoop.root}/lib/commons-httpclient-3.0.1.jar
